FPVTL-1115 try assign the correct resp solicitor index role and actually set the data being returned from the noc call, get rid of dodgy class field on OrganisationService too